# MAMV-IR

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  graph.py  llm.py  main.py  pyproject.toml  requirements.txt  sandbox.py  state.py  test_graph.py  test_sandbox.py
.github/workflows/: test.yml
agent/: __init__.py  graph.py  llm.py  metacognition.py  prompts.py  sandbox.py  state.py
agent/informational/: __init__.py  answers.py  candidate_export.py  constitution.py  ledger.py  models.py  observers.py  relativity.py  serialization.py  validation.py
docs/: ARCHITECTURE_REPORT.md  INFORMATIONAL_RELATIVITY.md  METACOGNITION.md
examples/: inspect_a_run.py
tests/: test_answer_inference_frames.py  test_candidate_export.py  test_governance_hardening.py  test_informational_relativity.py  test_llm_retry.py  test_mamv_ir.py  test_metacognition.py  test_reasoning_quality.py
